[package]
name = "expirement007"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = "0.17.0"
tokio = { version = "1.17.0", features = ["full"] }
mongodb = "2.1.0"
serde = "1.0.136"
num-traits = "0.2.14"
clap = { version = "3.1.5", features = ["derive"] }
hex = "0.4"